crates/sui-graphql-macros/tests/compile/root_type_not_found.stderr
error: Type 'XyzNonExistent' not found in GraphQL schema
 --> tests/compile/root_type_not_found.rs:5:24
  |
5 | #[response(root_type = "XyzNonExistent")]
  |                        ^^^^^^^^^^^^^^^^
